--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <div class="header">
       <div class="logo">
         <img src="./resources/images/img-myt-logo.jpg" alt="MyTimes logo"/>
+      </div>
+      <nav>
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </nav>  
   </body>
 </html>
