--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="./resources/css/styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
+    <header>
       <div class="logo">
         <img src="./resources/images/img-myt-logo.jpg" alt="MyTimes logo"/>
       </div>
@@ -16,6 +16,7 @@
         <span><a href="#">U.S.</a></span>
         <span><a href="#">Tech</a></span>
         <span><a href="#">Science</a></span>
-      </nav>  
+      </nav>
+    </header>    
   </body>
 </html>
