--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <div class="logo">
         <img src="./resources/images/img-myt-logo.jpg" alt="MyTimes logo"/>
+        <span>My Times</span>
       </div>
       <nav>
         <span><a href="#">World</a></span>
@@ -17,6 +18,6 @@
         <span><a href="#">Tech</a></span>
         <span><a href="#">Science</a></span>
       </nav>
-    </header>    
+    </header>
   </body>
 </html>
