--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- First News Column -->
       <div class="column large">
         <div class="lead-story">
-          <div class="image-content">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."
+          <div class="image-content"><span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
           </div>
           <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
           </p>
@@ -76,11 +76,18 @@
     <div class="column small">
       <img class="cookie" src="./resources/images/img-news-bite.png">
       <div class="news-bites">
-        <h2>NEWS BITES</h2>
-        <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can
+        <h3>NEWS BITES</h3>
+        <span class="bites">Cat Emoji Goes Viral</span> <span class="bites">Buy Youtube Views</span> <span class="bites">Home Business Advertising Ideas</span> <span class="bites">Advertising Internet Online</span> <span class="bites">Illustration in Marketing Materials</span> <span class="bites">Finally a Top Secret Way You Can</span>
         </p>
       </div>
     </div>
   </div>
+  <footer>
+      <div class="info">
+        <span class="title">My Times</span>
+        <nav>
+          <span><a href="#">World</a></span><span><a href="#">U.S.</a></span><span><a href="#">Tech</a></span><span><a href="#">Science</a></span>
+        </nav>
+        <p>&copy; 2016, My Times (A Division of Codecademy bite)</p>
   </body>
 </html>
